atualizando views, model e controller de admin, subadmin e user com modulo de passsos 1 ao 5 no artigo

--- a/views/articlesEditAdmin.ejs
+++ b/views/articlesEditAdmin.ejs
@@ -65,11 +65,77 @@
 
                     <form action="/admin/dashboard/articles/edit/<%= id %>" method="POST">
                             <div class="article__item">
-                                <label for="steps_by_step">Instruções</label>
-                                <textarea name="steps_by_step" id="" required><%= steps_by_step %></textarea>
+                                <h3>Instruções</h3>
+                                <ol>
+                                    <li><p>Caso não queira usar todos os 5 passos, basta deixar em branco!</p></li>
+                                    <li><p>Texto corrido em paragrafo unico</p></li>
+                                    <li><p>Cada passo deve ter o limite de 1000 caracteres</p></li>
+                                </ol>
+                                <label for="step1_text">Passo 1</label>
+                                <textarea name="step1_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required><%= step1_text %></textarea>
+                                
+                                <label for="step1_img">Link da foto que representa passo 1</label>
+                                <input type="text" name="step1_img" id="" value="<%= step1_img %>">
+                            
                                 <input class="article__id" name="id" type="number" value="<%= id %>" readonly>
                                 <input type="submit" value="Atualizar">
                             </div>
+                    </form>
+
+                    <form action="/admin/dashboard/articles/edit/<%= id %>" method="POST">
+                        <div class="article__item">
+                        
+                            <label for="step2_text">Passo 2</label>
+                            <textarea name="step2_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required><%= step2_text %></textarea>
+                            
+                            <label for="step2_img">Link da foto que representa passo 1</label>
+                            <input type="text" name="step2_img" id="" value="<%= step2_img %>">
+                        
+                            <input class="article__id" name="id" type="number" value="<%= id %>" readonly>
+                            <input type="submit" value="Atualizar">
+                        </div>
+                    </form>
+
+                    <form action="/admin/dashboard/articles/edit/<%= id %>" method="POST">
+                        <div class="article__item">
+                        
+                            <label for="step3_text">Passo 3</label>
+                            <textarea name="step3_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required><%= step3_text %></textarea>
+                            
+                            <label for="step3_img">Link da foto que representa passo 1</label>
+                            <input type="text" name="step3_img" id="" value="<%= step3_img %>">
+                        
+                            <input class="article__id" name="id" type="number" value="<%= id %>" readonly>
+                            <input type="submit" value="Atualizar">
+                        </div>
+                    </form>
+
+                    <form action="/admin/dashboard/articles/edit/<%= id %>" method="POST">
+                        <div class="article__item">
+                        
+                            <label for="step4_text">Passo 4</label>
+                            <textarea name="step4_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required><%= step4_text %></textarea>
+                            
+                            <label for="step4_img">Link da foto que representa passo 1</label>
+                            <input type="text" name="step4_img" id="" value="<%= step4_img %>">
+                        
+                            <input class="article__id" name="id" type="number" value="<%= id %>" readonly>
+                            <input type="submit" value="Atualizar">
+                        </div>
+                    </form>
+
+                    <form action="/admin/dashboard/articles/edit/<%= id %>" method="POST">
+                        <div class="article__item">
+                        
+                            <label for="step5_text">Passo 5</label>
+                            <textarea name="step5_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required><%= step5_text %></textarea>
+                            
+                            <label for="step5_img">Link da foto que representa passo 1</label>
+                            <input type="text" name="step5_img" id="" value="<%= step5_img %>">
+                        
+                            <input class="article__id" name="id" type="number" value="<%= id %>" readonly>
+                            <input type="submit" value="Atualizar">
+                        </div>
                     </form>
 
                     <form action="/admin/dashboard/articles/edit/<%= id %>" method="POST">
@@ -90,23 +156,6 @@
                             </div>
                     </form>
 
-                    <form action="/admin/dashboard/articles/edit/<%= id %>" method="POST">
-                            <div class="article__item">
-                                <label for="exp_image_initial">Imagem do ínicio do experimento</label>
-                                <input type="text" name="exp_image_initial" id="" value="<%= exp_image_initial %>" >
-                                <input class="article__id" name="id" type="number" value="<%= id %>" readonly>
-                                <input type="submit" value="Atualizar">
-                            </div>
-                    </form>
-
-                    <form action="/admin/dashboard/articles/edit/<%= id %>" method="POST">
-                            <div class="article__item">
-                                <label for="">Imagem do final do experimento</label>
-                                <input type="text"   name="exp_image_done" value="<%= exp_image_done %>">
-                                <input class="article__id" name="id" type="number" value="<%= id %>" readonly>
-                                <input type="submit" value="Atualizar">
-                            </div>
-                    </form>  
                         </fieldset>
 
                     <form action="/admin/dashboard/articles/edit/<%= id %>" method="post">
@@ -135,9 +184,7 @@
                             </select>
                             <input class="article__id" name="id" type="number"  name="id" value="<%= id %>" readonly>
                             <input type="submit" value="Atualizar">
-                    </form>
-
-                    
+                    </form>   
         
                     <form action="/admin/dashboard/articles/edit/<%= id %>" method="POST">
                         <fieldset>
