--- a/views/articlesNewSubadmin.ejs
+++ b/views/articlesNewSubadmin.ejs
@@ -46,11 +46,69 @@
                     </div>
 
                     <div class="article__item">
-                        <label for="">Instruções</label>
-                        <textarea name="steps_by_step" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
+
+                        <h3>Instruções</h3>
+                        <ol>
+                            <li><p>Caso não queira usar todos os 5 passos, basta deixar em branco!</p></li>
+                            <li><p>Texto corrido em paragrafo unico</p></li>
+                            <li><p>Cada passo deve ter o limite de 1000 caracteres</p></li>
+                        </ol>
+                        <label for="step1_text">Passo 1</label>
+                        <textarea name="step1_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
 2- Misturamos tudo e..
 ....
                         </textarea>
+                        <label for="step1_img">Link da foto que representa passo 1</label>
+                        <input type="text" name="step1_img" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                    
+                    </div>
+
+                    <div class="article__item">
+
+                        <label for="step2_text">Passo 2</label>
+                        <textarea name="step2_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
+2- Misturamos tudo e..
+....
+                        </textarea>
+                        <label for="step2_img">Link da foto que representa passo 2</label>
+                        <input type="text" name="step2_img" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                    
+                    </div>
+
+                    <div class="article__item">
+
+                        <label for="step3_text">Passo 3</label>
+                        <textarea name="step3_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
+2- Misturamos tudo e..
+....
+                        </textarea>
+                        <label for="step3_img">Link da foto que representa passo 3</label>
+                        <input type="text" name="step3_img" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                    
+                    </div>
+
+                    <div class="article__item">
+
+                        <label for="step4_text">Passo 4</label>
+                        <textarea name="step4_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
+2- Misturamos tudo e..
+....
+                        </textarea>
+                        <label for="step4_img">Link da foto que representa passo 4</label>
+                        <input type="text" name="step4_img" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                    
+                    </div>
+
+                    <div class="article__item">
+
+                        <label for="step5_text">Passo 5</label>
+                        <textarea name="step5_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
+2- Misturamos tudo e..
+....
+                        </textarea>
+                        <label for="step5_img">Link da foto que representa passo 5</label>
+                        <input type="text" name="step5_img" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                    
                     </div>
 
                     <div class="article__item">
@@ -63,16 +121,6 @@
                         <input type="text" name="exp_video">
                     </div>
 
-                    <div class="article__item">
-                        <label for="">Link da imagem do ínicio do experimento</label>
-                        <input type="text" name="exp_image_initial" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
-                    </div>
-
-                    <div class="article__item">
-                        <label for="">Link da imagem do final do experimento</label>
-                        <input type="text"  name="exp_image_done" placeholder="Ex: https://lh3.googleusercontent.com/Hv" >
-                    </div>
-                    
                 </fieldset>
 
                     <fieldset>
