--- a/views/partials/headerAlternativo.ejs
+++ b/views/partials/headerAlternativo.ejs
@@ -9,7 +9,7 @@
                     
                         <!--menu grande de teste-->
                         <div class="dropdown">
-                            <li><button class="dropbtn">Por assunto</button></li>
+                            <li><button class="dropbtn">ASSUNTOS</button></li>
 
                                 <div class="dropdown-content">
                                     <div class="header">
@@ -29,7 +29,7 @@
                         </div>
 
                         <div class="dropdown">
-                            <li><button class="dropbtn">Pela BNCC</button></li>
+                            <li><button class="dropbtn">BNCC</button></li>
 
                                 <div class="dropdown-content">
                                     <div class="header">
