--- a/views/articleOne.ejs
+++ b/views/articleOne.ejs
@@ -11,93 +11,124 @@
 
             <div class="article__section__header">
 
-                <div class="article__section__header__right">
-                    <h3 class="article__user__photo">Por:</h3>
-                    <div class="article__round-container">
+                <div class="article__section__header__left">
+                    <h3 class="article__user__id">Por:</h3>
+                    <div class="article__round__container">
                         <%if(us_img === null){%>
                             <img src="/assets/male-user-shadow-svgrepo-com.svg" alt="">
                         <%}else{%>
                             <img src="<%= us_img %>">
                         <%}%>
                     </div>   
-                    <a href="/profile/<%= us_id %>"><%= us_name %></a>
-                    <h3 class="article__date__title">Em:</h3>
-                    <p class="article__date"><%= created_at %></p>
+                    <a class="article__user__id" href="/profile/<%= us_id %>"><%= us_name %></a>
+                    <h3 class="article__user__id">Em:</h3>
+                    <p class="article__user__id"><%= created_at %></p>
                 </div>
                 
                 
-                <div class="article__section__header__left">
-                    <h3 class="article__date__update">Atualizado em: </h3>
-                    <p class="article__update" ><%= updated_at %></p>
+                <div class="article__section__header__right">
+                    <h3 class="article__user__id">Atualizado em: </h3>
+                    <p class="article__user__id" ><%= updated_at %></p>
                 </div>
                 
             </div>
 
-            <div class="article__section_body">
+            <div class="article__section__body">
                 
                 <div class="section__body__header">
-                        <h1 class="article__title"><%= title %></h3>
-                        <img class="article__main__photo" src="<%= exp_image_home %>"  loading="lazy">
-                        <p class="article__desciption"><%= description_home %></p>
+                        <div class="section__body__round__img">
+                            <img class="article__main__photo" src="<%- exp_image_home %>" loading="lazy" alt="">
+                        </div>
+                        <div class="section__body__intro">
+                            <h1 class="article__title"><%= title %></h3>
+                            <p class="article__desciption"><%= description_home %></p>
+                        </div>
                 </div>
                 
 
                 <div class="section__body__content">
-                    <h2 class="article__title__body">Materiais utilizados</h2>
-                    <p><%- materials %></p>
 
-                    <h2 class="article__title__body">Instruções</h2>
-                    <p><%- steps_by_step %></p>
+                    <div class="body__content__item">
+                        <h2 class="article__title__body">Materiais utilizados</h2>
+                        <p><%- materials %></p>
+                    </div>
 
-                    <h2 class="article__title__body">Explicação</h2>
-                    <p><%- explanation %></p>
+                    <div class="body__content__item">
+                        <h2 class="article__title__body">Instruções</h2>
+
+                        <div class="content__item__block">
+                            <h3>Passo 1</h3>
+                            <p><%- step1_text %></p>
+                            <div class="article__img__content">
+                                <img src="<%- step1_img %>" loading="lazy" alt="">
+                            </div>
+                        </div>                        
+
+                        <div class="content__item__block">
+                            <h3>Passo 2</h3>
+                            <p><%- step2_text %></p>
+                            <div class="article__img__content">
+                                <img src="<%- step2_img %>" loading="lazy" alt="">
+                            </div>
+                        </div>
+
+                        <div class="content__item__block">
+                            <h3>Passo 3</h3>
+                            <p><%- step3_text %></p>
+                            <div class="article__img__content">
+                                <img src="<%- step3_img %>" loading="lazy" alt="">
+                            </div>
+                        </div>
+
+                        <div class="content__item__block">
+                            <h3>Passo 4</h3>
+                            <p><%- step4_text %></p>
+                            <div class="article__img__content">
+                                <img src="<%- step4_img %>" loading="lazy" alt="">
+                            </div>
+                        </div>
+
+                        <div class="content__item__block">
+                            <h3>Passo 5</h3>
+                            <p><%- step5_text %></p>
+                            <div class="article__img__content">
+                                <img src="<%- step5_img %>" loading="lazy" alt="">
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="body__content__item">
+                        <h2 class="article__title__body">Explicação</h2>
+                        <p><%- explanation %></p>    
+                    </div>
+
+                    <div class="body__content__item"></div>
 
                     <h2 class="article__title__body diff">Video de demonstração</h2>
                     <div class="article__video__content">
                         <iframe class="article__video" src="https://www.youtube.com/embed/kVlcGpXqZ8Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     
-                
-                    <h2 class="article__title__body diff">Imagens de demonstração</h2>
-                    <!-- Slideshow container -->
-                    <div class="slideshow-container">
 
-                        <!-- Full-width images with number and caption text -->
-                    
-                        <div class="mySlides fade">
-                        <div class="numbertext">1 / 2</div>
-                        <img class="slide__img" src="<%= exp_image_initial %>"  loading="lazy">
-                        <div class="text">Inicio da experiência</div>
-                        </div>
-                    
-                        <div class="mySlides fade">
-                        <div class="numbertext">2 / 2</div>
-                        <img class="slide__img" src="<%= exp_image_done %>"  loading="lazy">
-                        <div class="text">Final da experiência</div>
-                        </div>
-                    
-                        <!-- Next and previous buttons -->
-                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                    </div>
-                    <br>
-                    
-                    <!-- The dots/circles -->
-                    <div style="text-align:center">
-                        <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                    </div>
+                    <div class="body__content__item"></div>
 
                     <h2 class="article__title__body">Categorias</h2>
                     <p>Assunto: <span><%= cat_title %></span></p>
                     <p>BNCC: <span><%= cat2_title %></span></p>
 
                     
+                    <div class="body__content__item"></div>
+
                     <h2 class="article__title__body">Para professores</h2>
                     <button type="button" class="collapsible">Orientações importantes</button>
                     <div class="button__content">
                     <p><%= tips_important %></p>
                     </div>
+
+
+                    <div class="body__content__item"></div>
 
                     <button type="button" class="collapsible">Dicas para o EaD</button>
                     <div class="button__content">
