--- a/views/articlesNewSubadmin.ejs
+++ b/views/articlesNewSubadmin.ejs
@@ -54,10 +54,7 @@
                             <li><p>Cada passo deve ter o limite de 1000 caracteres</p></li>
                         </ol>
                         <label for="step1_text">Passo 1</label>
-                        <textarea name="step1_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
-2- Misturamos tudo e..
-....
-                        </textarea>
+                        <textarea name="step1_text" id="" placeholder="Primeiro é preciso juntar todos os materiais em um balde e misturar bem" required></textarea>
                         <label for="step1_img">Link da foto que representa passo 1</label>
                         <input type="text" name="step1_img" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
                     
@@ -66,48 +63,36 @@
                     <div class="article__item">
 
                         <label for="step2_text">Passo 2</label>
-                        <textarea name="step2_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
-2- Misturamos tudo e..
-....
-                        </textarea>
+                        <textarea name="step2_text" id="" required>vazio</textarea>
                         <label for="step2_img">Link da foto que representa passo 2</label>
-                        <input type="text" name="step2_img" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                        <input type="text" name="step2_img" id="" required value="vazio">
                     
                     </div>
 
                     <div class="article__item">
 
                         <label for="step3_text">Passo 3</label>
-                        <textarea name="step3_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
-2- Misturamos tudo e..
-....
-                        </textarea>
+                        <textarea name="step3_text" id="" required>vazio</textarea>
                         <label for="step3_img">Link da foto que representa passo 3</label>
-                        <input type="text" name="step3_img" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                        <input type="text" name="step3_img" id="" required value="vazio">
                     
                     </div>
 
                     <div class="article__item">
 
                         <label for="step4_text">Passo 4</label>
-                        <textarea name="step4_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
-2- Misturamos tudo e..
-....
-                        </textarea>
+                        <textarea name="step4_text" id="" required>vazio</textarea>
                         <label for="step4_img">Link da foto que representa passo 4</label>
-                        <input type="text" name="step4_img" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                        <input type="text" name="step4_img" id=""required value="vazio">
                     
                     </div>
 
                     <div class="article__item">
 
                         <label for="step5_text">Passo 5</label>
-                        <textarea name="step5_text" id="" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
-2- Misturamos tudo e..
-....
-                        </textarea>
+                        <textarea name="step5_text" id=""  required>vazio</textarea>
                         <label for="step5_img">Link da foto que representa passo 5</label>
-                        <input type="text" name="step5_img" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                        <input type="text" name="step5_img" id="" required value="vazio">
                     
                     </div>
 
@@ -118,7 +103,7 @@
 
                     <div class="article__item">
                         <label for="">Link do video do experimento</label>
-                        <input type="text" name="exp_video">
+                        <input type="text" name="exp_video" required value="vazio">
                     </div>
 
                 </fieldset>
