corrigindo uma letra maiuscula no value de passo 5

--- a/views/articlesNewAdmin.ejs
+++ b/views/articlesNewAdmin.ejs
@@ -90,7 +90,7 @@
                     <div class="article__item">
 
                         <label for="step5_text">Passo 5</label>
-                        <textarea name="step5_text" id="" required>Vazio</textarea>
+                        <textarea name="step5_text" id="" required>vazio</textarea>
                         <label for="step5_img">Link da foto que representa passo 5</label>
                         <input type="text" name="step5_img" id="" required value="vazio">
                     
